item tracker no longer distorts based on window size

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -71,7 +71,7 @@ html {
     background-size: cover;
     color: white;
 }
-.container {
+div.main-grid {
   width: 100%;
   height: 100vh;
   max-width: 100%;
@@ -118,23 +118,24 @@ img.pic {
     height: 100px;
 }
 
-.trackerTable {
+.ui.table.trackerTable {
     border: 1px solid black;
     background-color: #3F3F3F;
 }
 img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
 }
-.images {
+div.images {
     width: 100px;
     height: 100px;
     position: relative;
+    text-align: center;
 }
-.drive-ability {
-  display: grid !important; 
-  position: relative !important;
-  grid-template-columns: repeat(3, 1fr) !important;
+div.drive-ability {
+  display: grid; 
+  position: relative;
+  grid-template-columns: repeat(6, 1fr);
 }
 .column {
   padding-bottom: 10px;
@@ -152,11 +153,12 @@ img {
     margin-left: -5px;
     z-index: 1;
 }
-.triangle {
-  height: 40px;
+img.triangle {
   grid-row: 1;
-  grid-column: 1;
+  grid-column: 1 / span 2;
   z-index: 1;
+  height: 40px;
+  width: 40px;
 }
 .form {
   grid-column: 1 / span 3;
@@ -166,13 +168,13 @@ img {
   grid-column: 1 / span 4;
   grid-row: 1;
 }
-.ui.image.form-level {
+img.form-level {
   grid-row: 1;
-  grid-column: 3;
+  grid-column: 6;
   z-index: 1;
   margin-top: 50px;
   height: 50px;
-  width: 80px;
+  width: 50px;
 }
 .ability-level {
   grid-row: 1;
@@ -186,7 +188,9 @@ img {
 .opaque {
     opacity: 0.30;
 }
-.world {
+td {
+  width: 70px;
+  height: 70px;
 }
 .world-image {
   opacity: 0.30;
@@ -209,9 +213,9 @@ img {
   display: none;
   overflow: hidden;
 }
-.ui.label.world-checks {
+div.world-checks {
   font-family: 'KHFont';
-  font-size: 12px;
+  font-size: 14px;
   background-color: transparent;
   background-image: none;
   color: white;
